; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_do_rpc_fetch_eof.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_do_rpc_fetch_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64 }

@fetch = common dso_local global i32 0, align 4
@inbuf = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [32 x i8] c"Trying fetch from empty buffer\0A\00", align 1
@RPC_BUFFER_MAGIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_rpc_fetch_eof(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  store i8** %0, i8*** %3, align 8
  %4 = load i32, i32* @fetch, align 4
  %5 = call i32 @ADD_CNT(i32 %4)
  %6 = load i32, i32* @fetch, align 4
  %7 = call i32 @START_TIMER(i32 %6)
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inbuf, align 8
  %9 = icmp ne %struct.TYPE_2__* %8, null
  br i1 %9, label %14, label %10

10:                                               ; preds = %1
  %11 = load i8**, i8*** %3, align 8
  store i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8** %11, align 8
  %12 = load i32, i32* @fetch, align 4
  %13 = call i32 @END_TIMER(i32 %12)
  store i32 0, i32* %2, align 4
  br label %37

14:                                               ; preds = %1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inbuf, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @RPC_BUFFER_MAGIC, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inbuf, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @inbuf, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  %27 = load i64, i64* %26, align 8
  %28 = icmp slt i64 %24, %27
  br i1 %28, label %29, label %33

29:                                               ; preds = %14
  %30 = load i8**, i8*** %3, align 8
  store i8* null, i8** %30, align 8
  %31 = load i32, i32* @fetch, align 4
  %32 = call i32 @END_TIMER(i32 %31)
  store i32 0, i32* %2, align 4
  br label %37

33:                                               ; preds = %14
  %34 = load i8**, i8*** %3, align 8
  store i8* null, i8** %34, align 8
  %35 = load i32, i32* @fetch, align 4
  %36 = call i32 @END_TIMER(i32 %35)
  store i32 1, i32* %2, align 4
  br label %37

37:                                               ; preds = %33, %29, %10
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @ADD_CNT(i32) #1

declare dso_local i32 @START_TIMER(i32) #1

declare dso_local i32 @END_TIMER(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
